feat: role de usuarios e suas permissões